@@ -6,6 +6,7 @@ Makefile.PL
 lib/AnyEvent.pm
 lib/AnyEvent/Impl/EV.pm
 lib/AnyEvent/Impl/Event.pm
+lib/AnyEvent/Impl/EventLib.pm
 lib/AnyEvent/Impl/Glib.pm
 lib/AnyEvent/Impl/Tk.pm
 lib/AnyEvent/Impl/Perl.pm
